[gd_scene load_steps=10 format=3 uid="uid://c56iqshopjhc4"]

[ext_resource type="Texture2D" uid="uid://diu482trt1qi3" path="res://resources/art/lightning-sheet.png" id="1_ns8fu"]
[ext_resource type="Script" path="res://scenes/lightning_mine/lightning.gd" id="2_oi58f"]
[ext_resource type="Script" path="res://scenes/lightning_mine/lightning_state.gd" id="3_x33al"]
[ext_resource type="Script" path="res://scenes/lightning_mine/lightning_go.gd" id="4_kr3fq"]
[ext_resource type="Script" path="res://scenes/lightning_mine/lightning_buzz.gd" id="5_iuahx"]

[sub_resource type="Animation" id="Animation_w8bri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_7d5rj"]
resource_name = "lightning_buzz"
length = 2.0
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.4375, 0.5, 1, 1.125, 1.25, 1.4375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(2, 1), Vector2i(1, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(0, 1), Vector2i(3, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_l5m1y"]
resource_name = "lightning_go"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p26dt"]
_data = {
"RESET": SubResource("Animation_w8bri"),
"lightning_buzz": SubResource("Animation_7d5rj"),
"lightning_go": SubResource("Animation_l5m1y")
}

[node name="Lightning" type="Sprite2D"]
z_index = 4096
texture = ExtResource("1_ns8fu")
offset = Vector2(0, -8)
hframes = 4
vframes = 2
script = ExtResource("2_oi58f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p26dt")
}

[node name="LightningState" type="Node" parent="."]
script = ExtResource("3_x33al")
_initial_state = "LightningGo"

[node name="LightningGo" type="Node" parent="LightningState"]
script = ExtResource("4_kr3fq")

[node name="TransitionTimer" type="Timer" parent="LightningState/LightningGo"]
one_shot = true

[node name="LightningBuzz" type="Node" parent="LightningState"]
script = ExtResource("5_iuahx")

[node name="AliveTimer" type="Timer" parent="LightningState/LightningBuzz"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="LightningState/LightningGo/TransitionTimer" to="LightningState/LightningGo" method="_on_transition_timer_timeout"]
[connection signal="timeout" from="LightningState/LightningBuzz/AliveTimer" to="LightningState/LightningBuzz" method="_on_alive_timer_timeout"]
